--- a/source/_posts/布局中的尺寸与位置.md
+++ b/source/_posts/布局中的尺寸与位置.md
@@ -42,25 +42,25 @@ tags: ['布局','css']
 }
 ```
 
-![image-20220211212939995](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211212939995.png)
+![image-20220211212939995](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211212939995.png)
 
 #### 解决方案1： 为父元素加边框
 
-![image-20220211212950623](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211212950623.png)
+![image-20220211212950623](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211212950623.png)
 
 #### 解决方案2：格式化上下文BFC
 
-![image-20220211212956218](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211212956218.png)
+![image-20220211212956218](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211212956218.png)
 
 #### 解决方案3：使用padding替代margin
 
-![image-20220211213005908](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213005908.png)
+![image-20220211213005908](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213005908.png)
 
 ### 自适应盒模型的特性
 
 当子盒子不写宽度的时候，添加padding，margin，border等，向内缩
 
-![image-20220211213012565](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213012565.png)
+![image-20220211213012565](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213012565.png)
 
 ### 标准盒模型和怪异盒模型
 
@@ -73,11 +73,11 @@ tags: ['布局','css']
 
 #### clear属性 清除上下
 
-![image-20220211213018198](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213018198.png)
+![image-20220211213018198](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213018198.png)
 
 #### BFC 清除父组件塌陷
 
-![image-20220211213024080](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213024080.png)
+![image-20220211213024080](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213024080.png)
 
 #### 空标签
 
@@ -160,7 +160,7 @@ tags: ['布局','css']
 
 - vertical-rl：垂直方向自右而左的书写方式
 
-![image-20220211213032302](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213032302.png)
+![image-20220211213032302](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213032302.png)
 
 ### BFC块级格式化上下文
 
@@ -181,6 +181,6 @@ tags: ['布局','css']
 - 解决margin-top传递问题   在父元素上加
 - 解决纵向margin重叠问题
 
-- - ![image-20220211213038891](https://gitee.com/LUNIONT/img-url/raw/master/image-20220211213038891.png)
+- - ![image-20220211213038891](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220211213038891.png)
 
 - 解决浮动高度塌陷  在父元素上加
