--- a/source/_posts/标准化大厂编码规范解决方案.md
+++ b/source/_posts/标准化大厂编码规范解决方案.md
@@ -63,7 +63,7 @@ module.exports = {
 
 ## 修改VSCode的TabSize
 
-![image-20220210163700095](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163700095.png)
+![image-20220210163700095](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163700095.png)
 
 ## 配置大厂git提交规范
 
@@ -174,7 +174,7 @@ module.exports = {
 
 **注意：确保保存为** **UTF-8** **的编码格式**，否则可能会出现以下错误：
 
-![image-20220210163651616](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163651616.png)
+![image-20220210163651616](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163651616.png)
 
 ### husky
 
@@ -192,7 +192,7 @@ npx husky install
 
 #### 在 package.json 中生成 prepare 指令
 
-![image-20220210163646656](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163646656.png)
+![image-20220210163646656](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163646656.png)
 
 #### 执行 prepare 指令
 
@@ -202,7 +202,7 @@ npm run prepare
 
 #### 执行成功，提示
 
-![image-20220210163641446](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163641446.png)
+![image-20220210163641446](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163641446.png)
 
 #### 添加 commitlint 的 hook 到 husky中，并指令在 commit-msg 的 hooks 下执行 npx --no-install commitlint --edit "$1" 指令
 
@@ -212,7 +212,7 @@ npx husky add .husky/commit-msg 'npx --no-install commitlint --edit "$1"'
 
 #### 此时的 .husky 的文件结构
 
-![image-20220210163635765](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163635765.png)
+![image-20220210163635765](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163635765.png)
 
 至此， 不符合规范的 commit 将不再可提交
 
@@ -225,7 +225,7 @@ npx husky add .husky/commit-msg 'npx --no-install commitlint --edit "$1"'
 1.  执行 `npx husky add .husky/pre-commit "npx eslint --ext .js,.vue src"` 添加 `commit` 时的 `hook` （`npx eslint --ext .js,.vue src` 会在执行到该 hook 时运行） 
 2.  该操作会生成对应文件 `pre-commit`： 
 
-![image-20220210163622918](https://gitee.com/LUNIONT/img-url/raw/master/image-20220210163622918.png)
+![image-20220210163622918](https://raw.githubusercontent.com/liyunfuyyyy/img-url/master/image-20220210163622918.png)
 
 
 
